--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "psr/http-message": "^1.0.1"
   },
   "require-dev": {
-    "guzzlehttp/guzzle": "~7.4"
+    "guzzlehttp/guzzle": "~7.4",
+    "pestphp/pest": "^1.21"
   },
   "autoload": {
     "psr-4": {
@@ -35,5 +36,10 @@
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
+  }
 }
